Сделаны две активити, добавлены некоторые изменения. Проект готов

--- a/app/src/main/res/layout/activity_make_order.xml
+++ b/app/src/main/res/layout/activity_make_order.xml
@@ -16,8 +16,7 @@
         android:textColor="#F3574008"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/radioGroupDrinks"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/radioGroupDrinks"
